--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,69 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>GuidanceRails</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<!DOCTYPE html>
+	<html>
+	<head>
+	  <%= stylesheet_link_tag    "application", :media => "all" %>
+	  <%= javascript_include_tag "application", :defaults %>
+	  <%= csrf_meta_tags %>
+		<title>Ateneo High School Guidance Office</title>
+		
+	</head>
+	<body>
+	<form action="" method="get">
 
-<%= yield %>
+	<div id="container">
+		
+		<div id="header">
+		</div>
 
-</body>
-</html>
+		
+		<div id= "nav">
+			<ul>
+				<li><%= link_to "home", root_url %></li>
+				<li><a href="#">faqs</a></li>
+				<li><a href="#">about us</a></li>
+				<li><%= link_to "logout" , destroy_user_session_path , :method => :delete %></li>
+				<li><a href="#">
+					<input type="text" size="20" name="text1" value="">
+					<input type="button" name="search" value="search">
+				</a></li>
+				
+			</ul>
+		</div>
+	</form>	
+		<div id="center">
+		
+			<div id= "sidebar">
+				<ul>
+					<li><%= link_to "Change password", edit_user_password_path(current_user) %></li>
+					<li><a href="viewcounselor.html" title="">View counselor accounts</a></li>
+					<li><a href="viewstudent.html" title="">View student profiles</a></li>
+					<li><a href="assigncounselor.html" title="assign counselors to respective students/sections">Assign counselor</a></li>
+					<li><a href="editweekly.html" title="assign counselors to respective students/sections">Edit weekly plan</a></li>
+					<li><a href="conductcounseling.html" title="assign counselors to respective students/sections">Conduct counseling</a></li>			</ul>	
+				
+			<br style="clear:both" /> 
+			</div>
+			
+			<div id="content">
+				<div id="stamps">
+			
+					<div id="date">
+					</div>
+				
+					<div id="identifiers">
+						<% if user_signed_in? %>
+							User Identified As: <span id="name"><%= current_user.name %></span>
+							<br/>
+							Position: <span id="position" >position</span>
+						<% end %>
+					</div>
+					
+					
+				</div>
+				
+	<%= yield %>
+	</div>
+	</div>
+	</div>
+	</body>
+	</html>
