--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,67 +1,13 @@
-/*
-****************/
+#jFlowSlide{ background:#DBF3FD; font-family: Georgia; }
+#myController { font-family: Georgia; padding:2px 0;  width:610px; background:#3AB7FF; }
+#myController span.jFlowSelected { background:#43A0D5;margin-right:0px; }
 
-body{
-background-color:#c2c2c2;
-}
+.slide-wrapper { padding: 5px; }
+.slide-thumbnail { width:300px; float:left; }
+.slide-thumbnail img {max-width:300px; }
+.slide-details { width:290px; float:right; margin-left:10px;}
+.slide-details h2 { font-size:1.5em; font-style: italic; font-weight:normal; line-height: 1; margin:0; }
+.slide-details .description { margin-top:10px; }
 
-
-/*typography
-***************/
-a{
-/*text-decoration: none;*/
-color: black;
-}
-
-a:hover{
-/*color: #0260a8;*/
-}
-
-
-a:active{
-/*color: orange;*/
-}
-
-.bar{
-/*color:#c2c2c2;*/
-}
-
-
-
-/*Container
-***************/
-#container{
-width: 960px;
-height:1000px;  
-margin-left: auto;
-margin-right: auto;
-background-color: white;
-}
-
-
-/*Header
-***************/
-
-#header{
-background-image: url(/assets/banner.jpg);
-background-repeat: no-repeat; 
-width: 960px;
-height: 150px;
-background-color: #0260a8;
-}
-
-/*Navigator
-***************/
-#nav{
-width: 950px;
-height: 25px;
-padding: 0 5px 0 5px;
-list-style: none;
-}
-
-
-#nav li{
-display: inline;
-margin: 0 5px 0 5px;
-}
-
+.jFlowControl, .jFlowPrev, .jFlowNext { color:#FFF; cursor:pointer; padding-left:5px; padding-right:5px; padding-top:2px; padding-bottom:2px; }
+.jFlowControl:hover, .jFlowPrev:hover, .jFlowNext:hover { background: #43A0D5; }
