--- a/app/assets/stylesheets/upload.css
+++ b/app/assets/stylesheets/upload.css
@@ -1,14 +1,5 @@
-/*upload
+/*body
 ***************/
-#uploader{
-width: 620px;
-float:left;
-clear: right;
-padding-top: 20px;
-padding-bottom: 20px;
-padding-left: 20px;
-}
-
 
 
 /*container
