--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,18 @@
 			<% if user_signed_in? %>	
 				<div id= "sidebar">
 					<ul>
-						<li><%= link_to "Change password", edit_user_password_path(current_user) %></li>
-						<li><a href="viewcounselor.html" title="">View counselor accounts</a></li>
-						<li><a href="viewstudent.html" title="">View student profiles</a></li>
-						<li><a href="assigncounselor.html" title="assign counselors to respective students/sections">Assign counselor</a></li>
-						<li><a href="editweekly.html" title="assign counselors to respective students/sections">Edit weekly plan</a></li>
-						<li><a href="conductcounseling.html" title="assign counselors to respective students/sections">Conduct counseling</a></li>
+						<% if current_user.role != 'Secretary' %>
+							<li><%= link_to "Change password", edit_user_password_path(current_user) %></li>
+							<% if current_user.role == 'Head Counselor' %>
+								<li><%= link_to "View counselor accounts", users_path %></li>
+								<li><a href="assigncounselor.html" title="assign counselors to respective students/sections">Assign counselor</a></li>
+							<% end -%>
+							<li><a href="viewstudent.html" title="">View student profiles</a></li>
+							<li><a href="editweekly.html" title="assign counselors to respective students/sections">Edit weekly plan</a></li>
+							<li><a href="conductcounseling.html" title="assign counselors to respective students/sections">Conduct counseling</a></li>
+						<% else %>
+							Haha secretary!
+						<% end %>
 					</ul>	
 					
 					<br style="clear:both" /> 
@@ -60,8 +66,9 @@
 						<% end %>
 					</div>
 					
-					
 				</div>
+				</div>
+					
 				
 	<%= yield %>
 	</div>
@@ -74,7 +81,6 @@
             </p>
             
           </div>				
-	</div>
-          <script type="text/javascript" src="/assets/after.js"></script>
 	</body>
+          <script type="text/javascript" src="/assets/after.js"></script>
 	</html>
