done with editing user accounts  On branch master 	modified:   app/assets/stylesheets/mainstyle.css 	modified:   app/assets/stylesheets/users.css.scss 	modified:   app/controllers/users_controller.rb 	modified:   app/views/users/edit.html.erb 	modified:   app/views/users/index.html.erb 	modified:   app/views/users/show.html.erb 	new file:   app/views/users/update.html.erb

--- a/app/assets/stylesheets/mainstyle.css
+++ b/app/assets/stylesheets/mainstyle.css
@@ -378,7 +378,7 @@ margin-top: 20px;
 
 #profhead{
 background-color:#a8bcdf;
-padding-top:50px;
+padding-top:20px;
 }
 
 #profile .label1{
@@ -425,6 +425,11 @@ background-color: #0260a8;
 
 form#new_user {
 	padding: 10px;
+}
+
+ul#head_bitch {
+	margin:2px;
+	margin-left:0px;
 }
 
 
