--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,16 @@
 	<div id="graypart">
 	<table>
 		<tr>
-			<td id="profhead" colspan="2">Profile:</td>
+			<td id="profhead" colspan="2">
+				<ul id="head_bitch">
+					<% if @user == current_user || current_user.role == 'Head Counselor' %>
+					 <li><%= link_to "Edit Profile", edit_user_path(@user) %></li>
+					<% end -%>
+					<% if current_user.role == 'Head Counselor' %>
+					 <li><%= link_to "Edit Sections", edit_user_path(@user) %></li>
+				 <% end -%>
+				</ul>
+			</td>
 		</tr>
 		<tr>
 			<td>Name:</td>
