added student entity and done with index  On branch master 	new file:   app/assets/javascripts/students.js.coffee 	modified:   app/assets/stylesheets/scaffolds.css.scss 	new file:   app/assets/stylesheets/students.css.scss 	new file:   app/controllers/students_controller.rb 	modified:   app/controllers/users_controller.rb 	new file:   app/helpers/students_helper.rb 	new file:   app/models/student.rb 	modified:   app/models/user.rb 	modified:   app/views/layouts/application.html.erb 	modified:   app/views/periods/index.html.erb 	new file:   app/views/students/_form.html.erb 	new file:   app/views/students/edit.html.erb 	new file:   app/views/students/index.html.erb 	new file:   app/views/students/new.html.erb 	new file:   app/views/students/show.html.erb 	modified:   app/views/users/edit.html.erb 	modified:   app/views/users/index.html.erb

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,6 +20,13 @@
 				<tr>
 				<td><%= f.submit "submit" %></td>
 			</tr>
+
+			<% if current_user.role == 'Head Counselor' %>
+				<% @sections.each do |section| %>
+					<% section_name = (section.year.to_s + section.name) %>
+					<%= check_box_tag 'section[]', section_name %>	<%= section_name %>
+				<% end -%>
+			<% end -%>
 			<% end -%>
 		</table>
 		</div>
