edited sidebar to allow secretary link to uploading csv file  On branch master 	new file:   app/assets/javascripts/csv.js.coffee 	new file:   app/assets/stylesheets/csv.css.scss 	new file:   app/controllers/csv_controller.rb 	new file:   app/helpers/csv_helper.rb 	modified:   app/views/application/_sidebar.html.erb 	new file:   app/views/csv/update.html.erb 	new file:   app/views/csv/upload.html.erb

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -11,7 +11,7 @@
 				<li><a href="editweekly.html" title="assign counselors to respective students/sections">Edit weekly plan</a></li>
 				<li><a href="conductcounseling.html" title="assign counselors to respective students/sections">Conduct counseling</a></li>
 			<% else %>
-				Haha secretary!
+				<li><%= link_to "Upload CSV file", :action => "upload",  :controller => "csv" %></li>
 			<% end %>
 		</ul>	
 		
