--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,8 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
-      <div><%= f.label :username %>
-      <%= f.text_field :username %></div>
+      <div>ID number<br/>
+      <%= f.number_field :username %></div>
 
       <div><%= f.label :name%>
       <%= f.text_field :name %></div>
