--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -11,11 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
+<!--   <div class="field">
     <%= f.label :picture %><br />
-    <%= f.text_area :picture %>
+    <%= f.file_field :picture %>
   </div>
-  <div class="field">
+ -->  <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
   </div>
