added parsing and viewing of grade school graduated from  On branch master 	modified:   app/models/student.rb 	modified:   app/views/students/show.html.erb

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -77,32 +77,10 @@
               </td>
             </tr>
             <tr>
-              <td class="label1">Physical Fitness</td>
-              <td><li>Height:5"6</li><li>Weight:118 lbs.</li></td>
-            </tr>
-            <tr>
-              <td class="label1">General Health:</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td class="label1">Eyesight:</td>
-              <td>Excellent (E)</td>
-            </tr>
-            <tr>
-              <td class="label1">Hearing:</td>
-              <td>Excellent (E)</td>
-            </tr>
-            <tr>
-              <td class="label1">Teeth:</td>
-              <td>Excellent (E)</td>
-            </tr>
-            <tr>
-              <td class="label1">Lungs:</td>
-              <td>Excellent (E)</td>
-            </tr>
-            <tr>
-              <td class="label1">Handicaps:</td>
-              <td></td>
+              <td class="label1">Graduated from:</td>
+              <td>
+                <%= @student.grade_school %>
+              </td>
             </tr>
           </table>
           <br/>
