separated section assignment to separate page for head counselor only  On branch master 	modified:   app/controllers/users_controller.rb 	modified:   app/models/student.rb 	modified:   app/views/users/edit.html.erb 	modified:   app/views/users/index.html.erb 	new file:   app/views/users/sectionedit.html.erb 	modified:   app/views/users/show.html.erb 	modified:   config/routes.rb

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,11 +4,11 @@
 		<tr>
 			<td id="profhead" colspan="2">
 				<ul id="head_bitch">
-					<% if @user == current_user || current_user.role == 'Head Counselor' %>
+					<% if @user == current_user %>
 					 <li><%= link_to "Edit Profile", edit_user_path(@user) %></li>
 					<% end -%>
 					<% if current_user.role == 'Head Counselor' %>
-					 <li><%= link_to "Edit Sections", edit_user_path(@user) %></li>
+					 <li><%= link_to "Edit Sections", { :controller => "users", :action => "sectionedit", :id => current_user.id} %></li>
 				 <% end -%>
 				</ul>
 			</td>
