--- a/app/views/periods/index.html.erb
+++ b/app/views/periods/index.html.erb
@@ -1,12 +1,1 @@
-<table>
-  <tr>
-    <th>Num</th>
-    <th>Date</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-</table>
-
-<br />
+<br style="clear:both" /> 
