--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,30 @@
-<div id="profile">
+<div id="title">
+				<a href="viewcounselor.html">View Counselor Accounts </a>
+				<span id="arrow"> > </span>
+				<a href="counseloraccount.html"> Counselor Account</a>
+				<br/>
+				<span id="counselor">Juan Dela Cruz</span>
+			</div>
+			
+			
+		<!-- the only area you can edit-->
+		
+			<div id="counseloraccount">
+				
+				<div id="counselornav">
+					<ul>
+						<li><a href="counseloraccount.html">Profile</a></li>
+						<li><a href="weeklyplan.html">Weekly Plan</a></li>
+						<li><a href="performancesummary.html">Performance Summary</a></li>
+						<li><a href="updateaccount.html">Update Account</a></li>
+						<li><a href="studentassignments.html">Student Assignments</a></li>
+						<li><a href="createaccount.html">Create Account</a></li>
+					</ul>
+				</div>
+				
+				<!--EDIT FROM HERE ONLY FOR COUNSELOR ACCOUNT-->
+				
+				<div id="profile">
 	<div id="graypart">
 	<table>
 		<tr>
@@ -25,3 +51,13 @@
 	</table>
 	</div>
 </div>
+
+				
+				<!--EDIT FROM HERE ONLY FOR COUNSELOR ACCOUNT-->
+				
+			</div>
+			
+					
+		<!-- the only area you can edit-->
+				
+		<br style="clear:both" /> 
