moved 'add student' table logic code to editweekly method  On branch master 	modified:   app/controllers/periods_controller.rb 	modified:   app/views/application/_sidebar.html.erb 	modified:   app/views/periods/index.html.erb

--- a/app/views/periods/index.html.erb
+++ b/app/views/periods/index.html.erb
@@ -10,7 +10,7 @@
 						<% @grouped_periods.each do |period_group| %>
 							<tr>
 								<% period_group.each do |period| %>
-									<td><%= link_to "Add Student", edit_period_path(period) %></td>
+									<td>TODO: check if there is someone scheduled in here</td>
 								<% end -%>
 							</tr>
 						<% end -%>
