--- a/app/views/schedule_entries/new.html.erb
+++ b/app/views/schedule_entries/new.html.erb
@@ -1,5 +1,40 @@
-<h1>New schedule_entry</h1>
+<div id="viewstudent">
+    <%= paginate @students %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', schedule_entries_path %>
+<table>
+    <tr id="thead">
+        <td>Name</td>
+        <td>ID No.</td>
+        <td>Year/Section</td>
+        <td>Schedule</td>
+    </tr>
+    <% @students.each do |student| %>
+        <tr>
+            <% student_name = [student.first_name, student.last_name].join ' ' %>
+            <% section = student.section %>
+            <% counselor = section.user %>
+            <td><%= link_to student_name, student %></td>
+            <td><%= student.student_id %></td>
+            <td><%= link_to section.name, section %></td>
+            <td>
+            <% @interview_types.each do |type| %>
+                <%= form_for @schedule_entry do |f| %>
+                    <%= f.hidden_field :interview_type_id, :value => type.id %>
+                    <%= f.hidden_field :period_id, :value => @period.id %>
+                    <%= f.hidden_field :student_id, :value => student.id %>
+                    <%= f.hidden_field :user_id, :value => counselor.id %>
+                    <%= f.submit "#{type.name}" %>
+                <% end -%>
+            <% end -%>
+            </td>
+        </tr>
+    <% end -%>
+</table>
+</div>
+    
+            
+<!-- the only area you can edit-->
+        
+<br style="clear:both" /> 
+    
+</div> 
